fix(ui/input-group): remove z-index [EE-5121]
fix [EE-5121]

--- a/app/assets/css/vendor-override.css
+++ b/app/assets/css/vendor-override.css
@@ -36,6 +36,10 @@
   border: 1px solid var(--border-input-group-addon-color);
 }
 
+.input-group .form-control {
+  z-index: unset;
+}
+
 .text-danger {
   color: var(--ui-error-9);
 }
